--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@ HealthCheck : This is v1 running in pod [[${host.name}]] ([[${host.ip}]])
 		</ul>
 	</div>
 	
-	<h4 class="g-top">방명록 v2_helloworld~~~</h4>
+	<h4 class="g-top">방명록 v3 Automatio complete~~~</h4>
 	<div class="top-img">
 		<img src="/bg-guestbook.jpg">
 	</div>
